--- a/html/index.html
+++ b/html/index.html
@@ -15,9 +15,9 @@
         <div class="title">
           We are coming soon
         </div>
-        <div class="title">
+        <div class="title" id="end-date">  
           1<sup>st</sup>March,2024 10:00 PM
-        </div>
+        </div> <br><br><br><br>
         <div class="col">
           <div>
             <input type="text" readonly value="0">
